# story-cot-nlp-0ab6

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: analysis.json  metrics.json  raw_outputs.jsonl
src/research_workspace/: analyze_results.py  story_cot_experiment.py
